<resources>
    <string name="ClearAll">Clear</string>
    <string name="N_A">N/A</string>
    <string name="Pause">pause</string>
    <string name="Play">play</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_forget_pwd">forget the password</string>
    <string name="ad_show">This is a third-party advertisement, which has nothing to do with software functions.</string>
    <string name="add_camer_invi">The ID number is invalid and does not comply with the rules!</string>
    <string name="add_camer_no_add">The cameras you added have reached the system maximum. Please delete some useless cameras before adding them again!</string>
    <string name="add_camera">Add device</string>
    <string name="add_camera_wifi_pwd">Wi-Fi password</string>
    <string name="add_camera_wifi_ssid">Wi-Fi name</string>
    <string name="add_device_audio">Device detected, please select how to add it</string>
    <string name="add_device_danale_dialog_more">"Choose a WiFi with a strong signal, and fill in the WiFi password correctly to quickly connect the device to the Internet. 
The following problems may cause the device to fail to connect to the Internet, and it is recommended to avoid
1. Check whether the WiFi anti-robbing network is turned on. This setting may cause the device to fail Normal network connection. You can temporarily turn off the anti-robbing network, and then restore the router settings after the device is successfully connected to the Internet; 
2. If your home has a dual-band router, please check whether the WiFi connected to the device is a 5GHz band WiFi, and please allow the device to connect 2.4GHz band WiFi; 
3. The device does not currently support WPA/WPA2 enterprise-level WiFi, please choose other WiFi; 
4. If your home WiFi is bridged, your network may be very unstable due to bridging reasons. Stable, it is recommended to connect to non-bridged WiFi"</string>
    <string name="add_device_danale_dialog_more_title">What are the Wi-Fi requirements for the device?</string>
    <string name="add_device_danale_more">learn more</string>
    <string name="add_device_danale_next">Next step</string>
    <string name="add_device_danale_wifi">"Didn't get wifi link"</string>
    <string name="add_device_danale_wifi1_1">Please connect your router first</string>
    <string name="add_device_danale_wifi_24g">Only supports 2.4GHz wifi</string>
    <string name="add_device_danale_wifi_introduction">Before configuring the network, please confirm that the device is powered on and in AP state.</string>
    <string name="add_device_danale_wifi_pass">Please enter password</string>
    <string name="add_device_danale_wifi_ssid">Please enter the router name</string>
    <string name="add_search_no">Not found, please try again...</string>
    <string name="add_search_result">search results</string>
    <string name="add_show_config1">Configure the device to connect to a WiFi network</string>
    <string name="add_show_config1_show">"You have a new device and need to connect it to your home for WiFi use, or need to reconfigure an old device's WiFi connection and access it remotely, please choose this."</string>
    <string name="add_show_config2">Add online camera</string>
    <string name="add_show_config2_show">Your device is already connected to the router and you need to add it to the App. Please select this.</string>
    <string name="add_show_config3">Mobile phone connects directly to device</string>
    <string name="add_show_config3_show">"You want to connect your phone directly to your device's WiFi, a direct point-to-point connection, and use it at close range, not like connecting to your router for remote access, choose this."</string>
    <string name="add_show_other">Other ways to add</string>
    <string name="add_show_other_msg">No device has been found yet, please make sure the device is connected to a power source and turned on</string>
    <string name="add_tools_show">Please select this option for tools such as smart ear monitors, smart blackhead monitors, and smart dental monitors.</string>
    <string name="add_tools_titles">Tools and equipment</string>
    <string name="add_tools_titles_1">Smart ear instrument</string>
    <string name="add_twodimensioncode">Starting the QR code program...</string>
    <string name="add_video_help">Device usage help</string>
    <string name="add_video_show">"Video tutorial on how to use the device
It is recommended to watch it first when using it for the first time"</string>
    <string name="alarm_pir_push">Alarm push</string>
    <string name="alarm_setting_1">Motion detection switch</string>
    <string name="alarm_setting_2">Motion detection video</string>
    <string name="alarm_setting_3">Alarm recording duration (s)</string>
    <string name="alarm_setting_4">Alarm delay(s)</string>
    <string name="alarm_setting_5">Motion detection sensitivity</string>
    <string name="alarm_setting_5_L">Low</string>
    <string name="alarm_setting_5_M">middle</string>
    <string name="alarm_setting_5_h">high</string>
    <string name="aleary_add_device">added</string>
    <string name="aler_cancel">neglect</string>
    <string name="aler_ok">Check</string>
    <string name="aler_ok_show">The program has exited and cannot be viewed!</string>
    <string name="alerm_detector_layout">Motion detection arming</string>
    <string name="alerm_detector_sensitivity">Motion detection sensitivity</string>
    <string name="alerm_getparams">Obtaining alarm information...</string>
    <string name="alerm_getparams_failed">Failed to obtain alarm information</string>
    <string name="alerm_gpio_alarm">IO linkage alarm</string>
    <string name="alerm_io_layout">Alarm input arming</string>
    <string name="alerm_io_move">IO linkage after alarm</string>
    <string name="alerm_ioin_levelhight">high level</string>
    <string name="alerm_ioin_levellow">low level</string>
    <string name="alerm_ioout_level">Output level</string>
    <string name="alerm_log">Alarm log</string>
    <string name="alerm_mail_inform">Email notification after alarm</string>
    <string name="alerm_motion_alarm">Motion detection alarm</string>
    <string name="alerm_no_log">No alarm log</string>
    <string name="alerm_preset_no">none</string>
    <string name="alerm_presetsit">Preset position linkage during alarm</string>
    <string name="alerm_record">Video recording after alarm</string>
    <string name="alerm_sensitivity_desc">(The smaller the value, the more sensitive it is)</string>
    <string name="alerm_set_failed">Alarm setting failed</string>
    <string name="alerm_setting">Alarm Settings</string>
    <string name="alerm_trigger_event">Alarm trigger event</string>
    <string name="alerm_trigger_level">trigger level</string>
    <string name="alerm_upload_picture">Upload pictures after calling the police</string>
    <string name="alerm_upload_picture_time_interval">Time interval for uploading pictures (seconds)</string>
    <string name="alerm_uploadinterval_toolong">Upload time 1-30 seconds</string>
    <string name="alerm_uploadinterval_toolong1">The upload time cannot exceed 3600 seconds</string>
    <string name="alerm_uploadpic_prompt">0 or empty means not to upload images</string>
    <string name="alerm_void">Enable alarm sound</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="ap_add_title">AP hotspot mode</string>
    <string name="ap_add_title1">Go to add</string>
    <string name="ap_add_title2">Is the device added by the AP equipped with a network?</string>
    <string name="ap_add_title3">Distribution network</string>
    <string name="ap_next">Go to WIFI configuration</string>
    <string name="app_name">365Cam</string>
    <string name="blt_show_add_show1">Only supports router 2.4G channels, does not support 5G channels</string>
    <string name="connecting">Getting video...</string>
    <string name="delete">delete</string>
    <string name="door_white_list_edit">edit</string>
    <string name="emptyshow">There are no files here yet</string>
    <string name="main_file_photo">photo</string>
    <string name="main_file_video">Video</string>
    <string name="ngetwifi_show2">Make sure the router is 2.4G and the password entered is correct, otherwise the device cannot be successfully configured.</string>
    <string name="other_net">Other networks</string>
    <string name="password">password:</string>
    <string name="setting_wifi">Wifi settings</string>
    <string name="showpwd">show password</string>
    <string name="wifi_manager">Manage WiFi network</string>
    <string name="wifi_safe">safety:</string>
    <string name="wifi_setting_pass_format">Key format:</string>
    <string name="wifi_setting_pass_format_16">Hexadecimal number</string>
    <string name="wifi_setting_pass_format_as">ASCII characters</string>
    <string name="wifi_setting_safe">Safe mode:</string>
    <string name="wifi_setting_safe_all">shared key</string>
    <string name="wifi_setting_safe_open">open system</string>
    <string name="wifi_signal_strong">Signal strength:</string>
</resources>