<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/topView" android:background="@mipmap/qh_allbg" android:fitsSystemWindows="true" android:clipToPadding="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:id="@id/Relative_top" android:background="@color/color_H_Main" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <Button android:id="@id/wifi_cancel" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/button_back_style1" />
        <com.shix.shixipc.view.MyTextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/color_white" android:ellipsize="marquee" android:layout_gravity="center_vertical" android:id="@id/tv_camera_setting" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:maxWidth="150.0dip" android:text="@string/setting_wifi" android:scrollHorizontally="true" android:singleLine="true" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" android:layout_centerInParent="true" android:marqueeRepeatLimit="marquee_forever" />
        <Button android:id="@id/wifi_ok" android:visibility="visible" android:text="@string/other_net" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/button_done_style2" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/Relative_top">
        <LinearLayout android:orientation="vertical" android:background="@drawable/background_listbg1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/all_item_margleftright">
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/linearLayout3" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:gravity="center_vertical" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:gravity="center" android:id="@id/ssid" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginLeft="5.0dip" android:text="SSID:" android:layout_alignParentLeft="true" />
                    <com.shix.shixipc.view.MyTextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:ellipsize="marquee" android:gravity="left" android:id="@id/wifi_tv_name" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:maxWidth="250.0dip" android:minWidth="150.0dip" android:scrollHorizontally="true" android:singleLine="true" android:layout_toRightOf="@id/ssid" android:layout_alignTop="@id/ssid" android:marqueeRepeatLimit="marquee_forever" />
                    <ImageView android:id="@id/wifi_img_drop" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/abs__spinner_ab_default_holo_light" android:layout_alignParentRight="true" />
                    <com.shix.shixipc.view.MyTextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:ellipsize="marquee" android:gravity="center" android:id="@id/wifi_tv_prompt" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:maxWidth="200.0dip" android:minWidth="50.0dip" android:scrollHorizontally="true" android:singleLine="true" android:layout_alignParentRight="true" android:marqueeRepeatLimit="marquee_forever" />
                </RelativeLayout>
                <ImageView android:id="@id/imageView1" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginRight="5.0dip" android:src="@color/color_qh_bom_normal_viewline" />
                <LinearLayout android:id="@id/wifi_sigalview" android:paddingLeft="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
                    <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:id="@id/wi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_signal_strong" />
                    <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:id="@id/wifi_tv_sigal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/connecting" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:id="@id/wifi_safe_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.shix.shixipc.view.MyTextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:ellipsize="marquee" android:gravity="center" android:id="@id/textView1" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:maxWidth="200.0dip" android:minWidth="50.0dip" android:text="@string/wifi_safe" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
                <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:id="@id/wifi_tv_safe" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
            </LinearLayout>
            <Button android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_white" android:id="@id/wifi_btn_manger" android:background="@drawable/btn_blue_selector" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="@dimen/all_item_margleftright" android:layout_marginTop="10.0dip" android:layout_marginRight="@dimen/all_item_margleftright" android:layout_marginBottom="10.0dip" android:text="@string/wifi_manager" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/wifi_pwd_view" android:background="@drawable/background_listbg1" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
            <LinearLayout android:id="@id/linearLayout5" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/password" />
                <EditText android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:gravity="center_vertical" android:id="@id/wifi_edit_pwd" android:background="@drawable/bg_border1" android:layout_width="wrap_content" android:layout_height="35.0dip" android:singleLine="true" android:maxLength="128" android:layout_weight="1.0" android:inputType="textPassword" />
            </LinearLayout>
            <ImageView android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:src="@color/color_main" />
            <CheckBox android:textColor="@color/color_qh_bom_normal" android:layout_gravity="right" android:id="@id/wifi_cbox_show_pwd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/showpwd" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/wep_show1" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
                <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:checkedButton="@id/rad1" android:text="@string/wifi_setting_safe" />
                <RadioGroup android:orientation="horizontal" android:id="@id/group1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RadioButton android:textColor="#ff000000" android:id="@id/rb1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/wifi_setting_safe_open" />
                    <RadioButton android:textColor="#ff000000" android:id="@id/rb2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_setting_safe_all" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:id="@id/wep_show2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/wifi_setting_pass_format" />
                <RadioGroup android:orientation="horizontal" android:id="@id/group2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checkedButton="@id/rad4">
                    <RadioButton android:textColor="#ff000000" android:id="@id/rb3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_setting_pass_format_as" />
                    <RadioButton android:textColor="#ff000000" android:id="@id/rb4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/wifi_setting_pass_format_16" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <ListView android:id="@id/wifi_listview" android:background="@drawable/background_listbg1" android:visibility="gone" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/all_item_margleftright" android:layout_marginRight="@dimen/all_item_margleftright" android:listSelector="#00000000" android:cacheColorHint="#00000000" android:divider="@color/color_qh_bom_normal_viewline" android:dividerHeight="0.5dip" android:footerDividersEnabled="false" />
    </LinearLayout>
</RelativeLayout>