<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:gravity="center" android:id="@id/Relative_top" android:background="@color/color_H_Main" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <Button android:id="@id/back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/button_back_style1" />
        <com.shix.shixipc.view.MyTextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/color_white" android:ellipsize="marquee" android:layout_gravity="center_vertical" android:id="@id/textview_add_camera" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:maxWidth="120.0dip" android:text="@string/add_camera" android:scrollHorizontally="true" android:singleLine="true" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" android:layout_centerInParent="true" android:marqueeRepeatLimit="marquee_forever" />
        <ImageButton android:background="#00000000" android:padding="5.0dip" android:visibility="invisible" android:layout_width="35.0dip" android:layout_height="30.0dip" android:layout_marginRight="10.0dip" android:src="@mipmap/qh_scan" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/ivDevice" android:layout_width="wrap_content" android:layout_height="140.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:src="@mipmap/add_img_wifi" android:scaleType="centerInside" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/selector_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip">
        <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginLeft="10.0dip" android:src="@mipmap/n_soud_ssid" />
        <EditText android:textSize="15.0sp" android:gravity="center_vertical" android:id="@id/edit_wify_name" android:background="#00000000" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="44.0dip" android:maxLines="1" android:maxLength="30" android:layout_weight="1.0" />
        <ImageView android:id="@id/btn_wifi_r" android:padding="4.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@mipmap/qh_right_next" />
    </LinearLayout>
    <TextView android:textSize="10.0sp" android:textColor="@color/red" android:gravity="left" android:id="@id/tv_hint" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/blt_show_add_show1" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/selector_input" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip">
        <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginLeft="10.0dip" android:src="@mipmap/n_soud_pwd" />
        <EditText android:textSize="15.0sp" android:gravity="center_vertical" android:id="@id/edit_wify_pass" android:background="@null" android:paddingLeft="7.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="44.0dip" android:hint="@string/add_device_danale_wifi_pass" android:maxLines="1" android:maxLength="30" android:layout_weight="1.0" android:inputType="textPassword" />
        <ImageView android:id="@id/edit_wify_pass_eye" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="43.0dip" android:layout_height="22.0dip" android:src="@mipmap/btn_eye" />
    </LinearLayout>
    <TextView android:textSize="13.0sp" android:textColor="@color/z4" android:gravity="center" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/add_device_danale_wifi1_1" />
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="13.0sp" android:textColor="@color/z4" android:gravity="center" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/ngetwifi_show2" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip">
            <TextView android:textSize="13.0sp" android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_device_danale_wifi_24g" />
            <View android:layout_width="15.0dip" android:layout_height="wrap_content" />
            <TextView android:textSize="13.0sp" android:textColor="@color/color_n_buttom_select_text_color" android:gravity="center" android:id="@id/add_more" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/add_device_danale_more" />
        </LinearLayout>
        <TextView android:textSize="15.0sp" android:textColor="@color/color_white" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/btn_next" android:background="@drawable/btn_green_selector" android:layout_width="300.0dip" android:layout_height="45.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="20.0dip" android:text="@string/add_device_danale_next" />
    </LinearLayout>
</LinearLayout>