<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/color_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/color_white" android:id="@id/button_leve_1" android:background="@drawable/listitem2_pressed_selector" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginBottom="10.0dip" android:text="@string/alarm_setting_5_h" android:singleLine="true" />
    <View android:background="@color/color_qh_bom_normal_viewline" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
    <Button android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/color_white" android:id="@id/button_leve_2" android:background="@drawable/listitem2_pressed_selector" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginBottom="10.0dip" android:text="@string/alarm_setting_5_M" />
    <View android:background="@color/color_qh_bom_normal_viewline" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
    <Button android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/color_white" android:id="@id/button_leve_3" android:background="@drawable/listitem2_pressed_selector" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginBottom="10.0dip" android:text="@string/alarm_setting_5_L" />
    <Button android:textSize="14.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/button_leve_4" android:visibility="gone" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginBottom="10.0dip" android:text="4" />
    <Button android:textSize="14.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/button_leve_5" android:visibility="gone" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginBottom="10.0dip" android:text="5" />
</LinearLayout>